# django-sveltekit-starter

./: .editorconfig  .env.ci  .env.example  .env.production.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MONOREPO-GUIDE.md  Makefile  Pipfile  Procfile  README.md  deploy.md  docker-compose.ci.yml  docker-compose.yml  gunicorn.conf.py  multi-tentancy-migration.md  package-lock.json  package.json  pyproject.toml  sync_openapi.js  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: backend.yml  ci.yml  deploy-to-dokku.yml  frontend.yml  integration.yml  lint-python.yml
ansible/: README.md  site.yml
ansible/inventory/: hosts
backend/: docker-compose.prod.yml  pyproject.toml  schema.yml
backend-template/: pyproject.toml
backend-template/.github/workflows/: ci.yml
backend-template/ansible/group_vars/: all.yml
backend-template/project/: settings.py
backend-template/project/accounts/: serializers.py
backend-template/project/core/docs/: tests.py  urls.py
backend/.github/workflows/: dependabot-auto-merge.yml
backend/ansible/: README.md  ansible_env.yml.example
backend/ansible/roles/dokku_base/tasks/: main.yml
backend/ansible/roles/dokku_environment/tasks/: main.yml
backend/ansible/roles/dokku_network/tasks/: main.yml
backend/ansible/roles/dokku_redis/tasks/: main.yml
backend/project/: celery.py  conftest.py
backend/project/accounts/: admin.py  serializers.py  urls.py  views.py
backend/project/accounts/migrations/: 0001_initial.py
backend/project/accounts/tests/: test_auth_apis.py  test_forms.py  test_models.py  test_views.py
backend/project/core/: middleware.py
backend/project/core/docs/: tests.py
backend/project/core/tests/: test_views.py
backend/project/core/utils/: html.py
backend/terraform/: README.md  firewall.tf
django_template/: conftest.py  jinja2.py  settings.py  tests.py  urls.py  views.py
django_template/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py
django_template/accounts/migrations/: 0001_initial.py
django_template/accounts/tests/: test_views.py
django_template/jinja2/: base.html.jinja
django_template/utils/: apps.py  openai.py  tests.py
docker/: Dockerfile  entrypoint.sh
frontend/: .dockerignore  .env  .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json  sync_openapi.js
frontend/src/lib/api/: index.ts  schema.d.ts
frontend/src/lib/components/: ArtifactCard.svelte  SendVerificationEmail.svelte
frontend/src/lib/components/layout/: AuthProvider.svelte  CommandPalette.svelte  HorizontalNavbar.svelte  IframeContainer.svelte  ModernNavbar.svelte  ModernSubNav.svelte
frontend/src/lib/config/: routes.ts
frontend/src/lib/stores/: account.ts
frontend/src/lib/utils/: backendProxy.ts  proxyUtils.ts  thirdPartyProxies.ts
frontend/src/routes/(auth)/: +layout.svelte  +page.svelte
frontend/src/routes/(auth)/account/: +page.svelte
frontend/src/routes/(auth)/refresh-token/: +server.ts
frontend/src/routes/(no-auth)/sentry/: +server.ts
frontend/src/routes/(no-auth)/welcome/: +page.svelte
project/: __init__.py  admin.py  asgi.py  celery.py  conftest.py  schema.py  settings.py  urls.py  wsgi.py
project/accounts/: adapters.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
project/accounts/migrations/: 0001_initial.py  0002_alter_user_name.py
project/accounts/tests/: test_models.py  test_views.py
project/core/: permissions.py
project/core/docs/: urls.py
project/core/management/commands/: setup_dev_env.py
project/core/templates/admin/: base_site.html
project/docs/: apps.py  tests.py  urls.py
project/utils/: apps.py  middleware.py  models.py  openai.py  permissions.py  tests.py  views.py
project/utils/tests/: test_datetime_utils.py  test_fields.py  test_views.py
project/vacancies/: admin.py  tasks.py  views.py
project/vacancies/management/commands/: dspy_model_optimizer.py  process_pending_vacancies.py
src/: app.html  hooks.client.ts  hooks.server.ts
src/lib/: supabaseClient.ts
src/lib/api/: backend-api-schema.d.ts  index.ts
src/lib/api/account/: auth.ts  user.ts
src/lib/api/paths/: index.ts
src/lib/components/: SendVerificationEmail.svelte  Spinner.svelte
src/lib/components/forms/accounts/: ChangeEmailForm.svelte  ChangePasswordForm.svelte
src/lib/components/loading/: Spinner.svelte
src/lib/stores/: account.ts  auth.ts
src/lib/stores/utils/: cookieStore.ts
src/lib/utils/: proxyUtils.ts  title.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/(auth)/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/(auth)/account/: +page.svelte
src/routes/(auth)/refresh-token/: +server.ts
src/routes/(no-auth)/account/login/: +page.server.ts  +page.svelte
src/routes/(no-auth)/sentry/: +server.ts
src/routes/(no-auth)/welcome/: +page.svelte
terraform/: README.md  create_state_bucket.sh  deploy.py  enable_apis.sh  firewall.tf  main.tf  network.tf  outputs.tf  setup_github_actions_secrets.sh  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/modules/django_deployment/: artifact-registry.tf  bucket.tf  cloud-run.tf  database.tf  gcp_settings.tf  github-actions.tf  outputs.tf  secrets.tf  service-accounts.tf  variables.tf  vpc.tf
(+17 files in other folders)
