[tool.poetry]
name = "backend-template"
version = "0.1.0"
description = "Django backend application"
authors = []
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Core Django packages
django = {extras = ["argon2"], version = "~=4.2"}
djangorestframework = "*"
dj-database-url = "*"
dj-rest-auth = {extras = ["with_social"], version = "*"}
# Used packages (not flagged by deptry)
beautifulsoup4 = "*"
celery = "^5.4.0"
hypothesis = "*"
markdownify = "*"
nest_asyncio = "*"
python-dotenv = "*"
sentry-sdk = "*"

# The following packages are not directly imported but are required for functionality
# Database
psycopg2-binary = "*"
# Caching and task queue
redis = "^5.2.1"
# Web server
gunicorn = "*"
# Security and middleware
whitenoise = {extras = ["brotli"], version = "*"}

[tool.poetry.group.dev.dependencies]
black = "*"
django-types = "*"
djangorestframework-types = "==0.7.1"
hypothesis = "*"
inotify = "*"
ipython = "*"
isort = "*"
model-bakery = "*"
pre-commit = "*"
ptpython = "*"
pyright = "*"
pytest = "*"
pytest-asyncio = "==0.21.1"
pytest-cov = "*"
pytest-django = "*"
pytest-mock = "*"
pytest-structlog = "*"
pytest-xdist = "*"
reorder-python-imports = "*"
requests-mock = "*"
respx = "*"
ruff = "*"
deptry = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = ["manage.py", "project/asgi.py", "project/wsgi.py"]
source = ["."]

[tool.coverage.report]
exclude_lines = [
    "class .*\\bProtocol\\):",
    "@overload",
    "@typing.overload",
    "pragma: no cover",
]
fail_under = 0

[tool.django-stubs]
django_settings_module = "project.settings"

[tool.pyright]
stubPath = "./typings"
reportImportCycles = false
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."
# ignore migrations, and also the files pyright excludes by default.
exclude = ["**/migrations", "**/node_modules", "**/__pycache__", "**/.*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
addopts = "--cov --dist=no -n 0 --reuse-db"
python_files = ["tests.py", "**/tests/test_*.py", "**/tests/**/test_*.py"]

[tool.ruff]
# Ignore max line length - black will handle this and it's okay to go over sometimes.
ignore = ["E501"]

[tool.isort]
profile = "black"